# oTo

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite-plugin-cargo-meta.js  vite.config.js
.github/workflows/: build.yml
licenses/: about.toml
scripts/: generate-third-party-notices.mjs  polish-release-notes.mjs  release.mjs
src/: common.css  conversion-queue.test.js  conversion-state.test.js  index.html  licenses.html  main.js  style.css  svg-controller.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  silence-preview.json
src-tauri/icons/: icon.icns
src-tauri/src/: converter.rs  lib.rs  main.rs  settings.rs  spool.rs
src-tauri/src/converter/: binary.rs  codec_args.rs  file_collector.rs  mod.rs  output.rs  probe.rs  process.rs  silence.rs  types.rs
src/about/: about.css  about.html  about.js
src/activity/: activity.css  activity.html  activity.js  log-follow.js  log-follow.test.js
src/i18n/: en.js  index.js  ja.js
src/settings/: settings.css  settings.html  settings.js
src/silence-preview/: preview.css  preview.html  preview.js  silence-utils.js  silence-utils.test.js
