[package]
name = "oto"
version = "26.5.9"
description = "oTo - Audio Converter"
authors = ["Akito Matsuda"]
edition = "2021"

[lib]
name = "oto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "oto"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
dirs = "5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
