[package]
name = "oto"
version = "26.5.18"
description = "oTo - Audio Converter"
authors = ["Akito Matsuda"]
edition = "2021"

[lib]
name = "oto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "oto"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["sync", "rt-multi-thread", "process", "io-util", "time", "fs"] }
walkdir = "2.5"
anyhow = "1.0"
dirs = "6.0"
base64 = "0.22"
uuid = { version = "1.23", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
